# Parsley

./: .gitignore  .replit  CHANGELOG.md  LICENSE  README.md  parsley.cabal
examples/calc/: AbsSyn.hs  Lexer.hs  Main.hs  Parser.ps
src/: ActionTable.hs  First.hs  Follow.hs  GoToTable.hs  Grammar.hs  Main.hs  ParserMonad.hs  RuleTable.hs
src/Common/: Action.hs  Code.hs  Point.hs  Rule.hs  StateNum.hs
src/ParserMonad/: Internal.hs
src/Table/: Trans.hs
src/Table/Trans/: Item.hs
