cabal-version:       2.4

name:                parsley
version:             0.1.0.0
synopsis:            A lexer/parser generator with good error reporting
homepage:            https://github.com/Xenovia02/Parsley
license:             MIT
license-file:        LICENSE
author:              Rose
maintainer:          RoseAetherius@gmail.com
category:            Parsing
extra-source-files:  CHANGELOG.md, README.md

executable parsley
    main-is: Main.hs
    other-modules:
        Common.Action,
        Common.Code,
        Common.Rule,
        Common.StateNum,
        Grammar,
        Table.Trans,
        Table.Trans.Item
        ParserMonad,
        ParserMonad.Internal
    default-extensions:
        BangPatterns,
        LambdaCase
    other-extensions:
        TypeSynonymInstances
    build-depends:
        array        >= 0.5.3,
        base         >= 4.12.0,
        containers   >= 0.6.0,
        transformers >= 0.5.6
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -O0
        -fhide-source-paths
        -Wall
        -Wextra
        -Wcompat
        -Wredundant-constraints
        -Wmissing-export-lists
        -Wno-unused-do-bind
        -Werror
